installers/aws-eks/install/templates/engine/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: execution
  namespace: legend
  labels:
    app: execution
    ci.name: execution
spec:
  selector:
    app: execution
  ports:
    - protocol: TCP
      port: __LEGEND_ENGINE_PORT__
      targetPort: __LEGEND_ENGINE_PORT__
