installers/aws-eks/install/templates/engine/k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: execution
  namespace: legend
  annotations:
    #nginx.ingress.kubernetes.io/ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    #nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: execution
    ci.name: execution
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: execution
              servicePort: __LEGEND_ENGINE_PORT__
            path: /exec
